<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/error_fetching_data"
            android:visibility="gone" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/app_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/app_title_color"/>

        <TextView
            android:id="@+id/upcomingEventsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/upcoming_events_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/app_title_color"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcomingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="5dp" />

        <TextView
            android:id="@+id/finishedEventsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="8dp"
            android:text="@string/finished_events_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/app_title_color"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/finishedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:padding="5dp" />

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/refresh"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
