<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:background="@color/search_view_background"
        android:iconifiedByDefault="true"
        android:queryHint="@string/search_events_hint" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchView"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchView"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/error_fetching_data"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upcomingRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/errorMessage"
        android:layout_marginBottom="75dp"
        android:padding="5dp" />

    <TextView
        android:id="@+id/noResultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/no_results_found"
        android:textColor="@color/no_results_color"
        android:visibility="gone" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/refresh"
        android:visibility="gone" />

    <Button
        android:id="@+id/refreshButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/refresh"
        android:visibility="gone" />
</RelativeLayout>
