<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/eventNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:shadowColor="@color/shadowColor"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:textColor="@color/primaryTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/eventImageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/image_background"
                    android:contentDescription="@string/todo"
                    android:padding="4dp"
                    android:scaleType="centerCrop" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/favorite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="16dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_favorite_border" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/eventSummaryTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:lineSpacingExtra="2dp"
                    android:padding="16dp"
                    android:shadowColor="@color/shadowColor"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/eventDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:lineSpacingExtra="2dp"
                    android:padding="16dp"
                    android:shadowColor="@color/shadowColor"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/eventDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/eventLocationTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/eventOwnerTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/eventQuotaTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/eventRegistrantsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/eventRemainingQuotaTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/eventCategoryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/error_fetching_data"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <Button
                android:id="@+id/eventLinkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/go_to_event_page"
                android:textColor="@color/buttonTextColor" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
